# TermExplorer

./: .gitignore  CMakeLists.txt  README.md  disk.cpp  disk.hpp  file_node.hpp  file_tree.cpp  file_tree.hpp  filesystem.cpp  filesystem.hpp  main.cpp  tui.cpp  tui.hpp
